Fixed problems with responsiveness in Header.jsx by allowing it to wrap and adding some more padding to the other components

--- a/global.css
+++ b/global.css
@@ -3,7 +3,7 @@
   --fg: #000000;
   --table-bg: #ffffff;
   --table-header-bg: #b99f9f;
-  --table-hover-bg: #dbdbdb;
+  --table-hover-bg: #c4c4c4;
   --table-row-even: #f3efef;
 }
 
