--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2%;
+  padding: 4%;
 }
 
 .leftColumn {
