--- a/src/pages/LogIn/LogIn.module.css
+++ b/src/pages/LogIn/LogIn.module.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2%;
+  padding: 4%;
 }
 
 .inputForm {
